# Paddle

./: CMakeLists.txt  superjomn_build.sh
cmake/: configure.cmake  generic.cmake
cmake/cross_compiling/: postproject.cmake
lite/: CMakeLists.txt
lite/api/: CMakeLists.txt  cxx_api.cc  cxx_api.h  light_api.cc  light_api.h  paddle_api.h  paddle_place.h
lite/api/android/jni/native/: CMakeLists.txt
lite/arm/: CMakeLists.txt
lite/arm/math/: CMakeLists.txt
lite/core/: CMakeLists.txt  context.h  memory.cc  memory.h  op_lite.cc  op_lite.h  op_registry.cc  op_registry.h  program.cc  program.h  scope.cc  scope.h  tensor.cc  tensor.h  type_system.cc  type_system.h  types.h  workspace.cc  workspace.h
lite/core/mir/: CMakeLists.txt  pattern_matcher.h
lite/model_parser/: CMakeLists.txt  compatible_pb.cc  model_parser.cc  model_parser.h
lite/model_parser/pb/: CMakeLists.txt
lite/operators/: CMakeLists.txt  op_params.h
lite/tools/: build.sh
lite/utils/: CMakeLists.txt  logging.cc  logging.h  macros.h  rtti.cc  rtti.h  varient.h
paddle/fluid/incubate/lite/cuda/: cuda_utils.h
paddle/fluid/incubate/lite/operators/: op_params.h
paddle/fluid/incubate/lite/utils/: varient.h
paddle/fluid/lite/: CMakeLists.txt
paddle/fluid/lite/api/: light_api.h  light_api_test.cc
paddle/fluid/lite/core/: context.h  program.h
paddle/fluid/lite/core/mir/: CMakeLists.txt  node.cc  (+3 more)
paddle/fluid/lite/cuda/: cuda_utils.h
paddle/fluid/lite/operators/: op_params.h
paddle/fluid/lite/tests/: CMakeLists.txt  test_framework.cc  test_framework.h
paddle/fluid/lite/utils/: varient.h
(+3 files in other folders)
